--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang= "ru">
 <head>
-    <meta charset="UTF-8">
-    <title>lesson</title>
+
+  <meta charset="utf-8"/>
+  <title>Lesson 2</title>
 </head>
 <body>
-<h1>lesson 1</h1>
+
+<h1>Моя первая страница</h1>
+
+<p>
+  <a href="about/index.html">Об авторе</a>
+</p>
+
+
+
 </body>
 </html>
