--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html lang= "ru">
+<html lang="en">
 <head>
-
-  <meta charset="utf-8"/>
-  <title>Lesson 2</title>
+    <meta charset="UTF-8">
+    <title>lesson</title>
 </head>
 <body>
-
-<h1>Моя первая страница</h1>
-
-<p>
-  <a href="about/index.html">Об авторе</a>
-</p>
-
-
-
+<h1>lesson 1</h1>
 </body>
 </html>
