Lesson-3.add <thead>,<tbody>,submit,

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>lesson</title>
   </head>
   <body>
-
     <h1>lesson 3</h1>
     <hr />
     <img src="./img/amstaff.jpg" alt="amstaff breed dog" />
@@ -53,56 +52,60 @@
 
     <hr />
     <table border="1" width="1000">
-      <caption>
-        Таблица-1
-      </caption>
-      <tr>
-        <th colspan="2">Tag</th>
-        <th>Descripyion</th>
-      </tr>
-      <tr>
-        <th>1</th>
-        <td>&lt;table&gt;</td>
-        <td>Defines a row in a table</td>
-      </tr>
-      <tr>
-        <th>2</th>
-        <td>&lt;tr&gt;</td>
-        <td>Defines a row in a table</td>
-      </tr>
-      <tr>
-        <th>3</th>
-        <td>&lt;th&gt;</td>
-        <td rowspan="2">Defines a "header cell"/ "cell" in a table</td>
-      </tr>
-      <tr>
-        <th>4</th>
-        <td>&lt;td&gt;</td>
-      </tr>
-      <tr>
-        <th>5</th>
-        <td colspan="2">Rarely used</td>
-      </tr>
-      <tr>
-        <th>6</th>
-        <td>&lt;caption&gt;</td>
-        <td>Defines a table caption</td>
-      </tr>
-      <tr>
-        <th>7</th>
-        <td>&lt;thead&gt;</td>
-        <td>Groups the header content in a table</td>
-      </tr>
-      <tr>
-        <th>8</th>
-        <td>&lt;tbody&gt;</td>
-        <td>Groups the body content in a table</td>
-      </tr>
-      <tr>
-        <th>9</th>
-        <td>&lt;tfoot&gt;</td>
-        <td>Groups the footer content in a table</td>
-      </tr>
+      Таблица-1
+
+
+        <thead>
+          <tr>
+            <th colspan="2">Tag</th>
+            <th>Descripyion</th>
+          </tr>
+        </thead>
+      <tbody>
+        <tr>
+          <th>1</th>
+          <td>&lt;table&gt;</td>
+          <td>Defines a row in a table</td>
+        </tr>
+        <tr>
+          <th>2</th>
+          <td>&lt;tr&gt;</td>
+          <td>Defines a row in a table</td>
+        </tr>
+        <tr>
+          <th>3</th>
+          <td>&lt;th&gt;</td>
+          <td rowspan="2">Defines a "header cell"/ "cell" in a table</td>
+        </tr>
+        <tr>
+          <th>4</th>
+          <td>&lt;td&gt;</td>
+        </tr>
+        <tr>
+          <th>5</th>
+          <td colspan="2">Rarely used</td>
+        </tr>
+        <tr>
+          <th>6</th>
+          <td>&lt;caption&gt;</td>
+          <td>Defines a table caption</td>
+        </tr>
+        <tr>
+          <th>7</th>
+          <td>&lt;thead&gt;</td>
+          <td>Groups the header content in a table</td>
+        </tr>
+        <tr>
+          <th>8</th>
+          <td>&lt;tbody&gt;</td>
+          <td>Groups the body content in a table</td>
+        </tr>
+        <tr>
+          <th>9</th>
+          <td>&lt;tfoot&gt;</td>
+          <td>Groups the footer content in a table</td>
+        </tr>
+      </tbody>
     </table>
     <hr />
     <form action="/" method="get">
@@ -159,7 +162,7 @@
         </select>
 
         <p>
-          <button>Send</button>
+          <input type="submit" />
         </p>
       </fieldset>
     </form>
