--- a/index.html
+++ b/index.html
@@ -145,14 +145,15 @@
         <label for="html3">Hyper Tool Markup Language</label>
 
         <p>What does HTTP stand for?</p>
+
         <input type="radio" id="http1" name="HTML" value="1" />
         <label for="http1">Hyper Text Translate Protocol</label><br />
         <input type="radio" id="http2" name="HTML" value="2" />
         <label for="http2">Hyper Text Transmission Protocol</label><br />
         <input type="radio" id="http3" name="HTML" value="3" />
         <label for="http3">Hyper Text Transfer Protocol</label><br />
-        Comment <br />
-        <textarea name="Comment" maxlength="500">Comment</textarea><br />
+        <label for="comment">Comment</label> <br />
+        <textarea id="Comment" maxlength="500">Comment</textarea><br />
         What does HTML stand for? <br />
         <select id="Html" name="Html" style="width: 250px">
           <option value="1" selected>Your answer</option>
