lesson_5 removed the extra wrappers,del "heading",changed to relative values px-em/%/..

--- a/index.html
+++ b/index.html
@@ -49,41 +49,35 @@
         </div>
       </div>
     </section>
-    <footer>
-      <section class="footer" >
-        <div class="footer-about">
-          <div class="about">
+      <footer>
+        <section class="footer" >
+          <div class="footer-about">
             <ul class="otdelni">
-              <li class="bold">About</li>
-              <li>How Triphouse work</li>
-              <li>Careers</li>
-              <li>Privacy</li>
-              <li>Terms</li>
+              <li class="bold footer-text">About</li>
+              <li class="footer-text">How Triphouse work</li>
+              <li class="footer-text" >Careers</li>
+              <li class="footer-text" >Privacy</li>
+              <li class="footer-text" >Terms</li>
+            </ul>
+            <ul class="otdelni">
+              <li class="bold footer-text">Property types</li>
+              <li class="footer-text" >Guest houses</li>
+              <li class="footer-text" >Hotels</li>
+              <li class="footer-text" >Apartments</li>
+              <li class="footer-text" >Villas</li>
+              <li class="footer-text" >Holiday homes</li>
+              <li class="footer-text" >Hostels</li>
+            </ul>
+            <ul class="otdelni">
+              <li class="bold footer-text">Support</li>
+              <li class="footer-text" >Contact Customer Service</li>
+              <li class="footer-text" >FAQ</li>
             </ul>
           </div>
-          <div class="property">
-            <ul class="otdelni">
-              <li class="bold">Property types</li>
-              <li>Guest houses</li>
-              <li>Hotels</li>
-              <li>Apartments</li>
-              <li>Villas</li>
-              <li>Holiday homes</li>
-              <li>Hostels</li>
-            </ul>
+          <div class="triphouse">
+            <p>&#169;2020 Triphouse, Inc.All rights reserved</p>
           </div>
-          <div class="property">
-            <ul class="otdelni">
-              <li class="bold">Support</li>
-              <li>Contact Customer Service</li>
-              <li>FAQ</li>
-            </ul>
-          </div>
-        </div>
-        <div class="triphouse">
-          <p>&#169;2020 Triphouse, Inc.All rights reserved</p>
-        </div>
-      </section>
-    </footer>
+        </section>
+      </footer>
   </body>
 </html>
