--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Lesson</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="homework" />
     <meta name="keywords" content="lists tables and forms" />
     <meta name="author" content="Alexey Tretyakov" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <title>lesson</title>
@@ -71,17 +73,17 @@
     </section>
     <footer>
       <section class="footer" >
+<!--        div class="footer_bg"><-->
         <div class="footer-about">
-
             <ul class="otdelni">
-              <li class="bold footer-text">About</li>
+              <li class="bold footer-text-bold">About</li>
               <li class="footer-text">How Triphouse work</li>
               <li class="footer-text" >Careers</li>
               <li class="footer-text" >Privacy</li>
               <li class="footer-text" >Terms</li>
             </ul>
             <ul class="otdelni">
-              <li class="bold footer-text">Property types</li>
+              <li class="bold footer-text-bold">Property types</li>
               <li class="footer-text" >Guest houses</li>
               <li class="footer-text" >Hotels</li>
               <li class="footer-text" >Apartments</li>
@@ -90,14 +92,15 @@
               <li class="footer-text" >Hostels</li>
             </ul>
             <ul class="otdelni">
-              <li class="bold footer-text">Support</li>
+              <li class="bold      footer-text-bold">Support</li>
               <li class="footer-text" >Contact Customer Service</li>
               <li class="footer-text" >FAQ</li>
             </ul>
         </div>
         <div class="triphouse">
-          <p>&#169;2020 Triphouse, Inc.All rights reserved</p>
+          <p class="triphouse-p">&#169;2020 Triphouse, Inc.All rights reserved</p>
         </div>
+<!--        </div>-->
       </section>
     </footer>
   </body>
