Lesson_8 Resolve conflicts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section >
   <header class="content">
     <nav class="block-1">
-      <img class="logo_vector" src="./img/css_sprites_logo.png" alt="logo">
+      <img class="logo_vector" src="./img/css_sprites_logo.png" alt=git"logo">
       <div class="menu">
         <a class="a_menu" href="#">Stays</a>
         <a  class="a_menu" href="#">Attractios</a>
