--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
   <meta charset="UTF-8" />
+  <title>lesson</title>
 </head>
 <body>
 <section >
@@ -50,7 +51,7 @@
 </section>
 <section class="advantages">
   <div class="advantages">
-    <h2 class="content-home-heading">What do we offer</h2>
+    <h2 class="content-home-heading underline" >What do we offer</h2>
     <div class="navlist-block">
       <ul class="navlist">
         <li >
