--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
   <meta charset="UTF-8" />
-  <title>lessoon</title>
+  <title>lesson</title>
 </head>
 <body>
 
 <section >
+  <div class="advantages-width">
   <div class="advantages" id="advantages">
     <h2 class="content-home-heading" id="content-home-heading">What do we offer</h2>
     <div class="navlist-block">
@@ -36,36 +37,39 @@
       </ul>
     </div>
   </div>
+  </div>
 </section>
-<footer class="footer">
-
-    <div class="footer-about" >
-
-      <ul class="otdelni">
-        <li class="bold-footer-text">About</li>
-        <li class="footer-text">How Triphouse work</li>
-        <li class="footer-text" >Careers</li>
-        <li class="footer-text" >Privacy</li>
-        <li class="footer-text" >Terms</li>
-      </ul>
-      <ul class="otdelni">
-        <li class="bold-footer-text">Property types</li>
-        <li class="footer-text" >Guest houses</li>
-        <li class="footer-text" >Hotels</li>
-        <li class="footer-text" >Apartments</li>
-        <li class="footer-text" >Villas</li>
-        <li class="footer-text" >Holiday homes</li>
-        <li class="footer-text" >Hostels</li>
-      </ul>
-      <ul class="otdelni">
-        <li class="bold-footer-text">Support</li>
-        <li class="footer-text" >Contact Customer Service</li>
-        <li class="footer-text" >FAQ</li>
-      </ul>
+<footer>
+  <div class="footer" >
+    <div class="fotter-width">
+      <div class="footer-about" >
+        <ul class="otdelni">
+          <li class="bold-footer-text">About</li>
+          <li class="footer-text">How Triphouse work</li>
+          <li class="footer-text" >Careers</li>
+          <li class="footer-text" >Privacy</li>
+          <li class="footer-text" >Terms</li>
+        </ul>
+        <ul class="otdelni">
+          <li class="bold-footer-text">Property types</li>
+          <li class="footer-text" >Guest houses</li>
+          <li class="footer-text" >Hotels</li>
+          <li class="footer-text" >Apartments</li>
+          <li class="footer-text" >Villas</li>
+          <li class="footer-text" >Holiday homes</li>
+          <li class="footer-text" >Hostels</li>
+        </ul>
+        <ul class="otdelni">
+          <li class="bold-footer-text">Support</li>
+          <li class="footer-text" >Contact Customer Service</li>
+          <li class="footer-text" >FAQ</li>
+        </ul>
+      </div>
+      <div class="triphouse">
+        <p class="triphouse-p">&#169;2020 Triphouse, Inc.All rights reserved</p>
+      </div>
     </div>
-    <div class="triphouse">
-      <p class="triphouse-p">&#169;2020 Triphouse, Inc.All rights reserved</p>
-    </div>
-  </footer>
+  </div>
+</footer>
 </body>
 </html>
