--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h1 class="discover">Discover stays <br> to live, work or just relax</h1>
       <div class="search">
         <div class="search-p">
-          <p class="search-p-text">Your destination or hotel name</p>
-          <p class="search-p-text">Check-in — Check-out</p>
+          <label for="hotel-search" class="search-p-text">Your destination or hotel name</label>
+          <label for="start-search" class="search-p-text">Check-in — Check-out</label>
         </div>
         <form class="search-block">
           <input class="hotel-search-input" list="hotel" type="search" id="hotel-search" name="hotel-search">
@@ -173,14 +173,14 @@
   <div class="footer" >
     <div class="fotter-width">
       <div class="footer-about" >
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">About</li>
           <li class="footer-text">How Triphouse work</li>
           <li class="footer-text" >Careers</li>
           <li class="footer-text" >Privacy</li>
           <li class="footer-text" >Terms</li>
         </ul>
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">Property types</li>
           <li class="footer-text" >Guest houses</li>
           <li class="footer-text" >Hotels</li>
@@ -189,7 +189,7 @@
           <li class="footer-text" >Holiday homes</li>
           <li class="footer-text" >Hostels</li>
         </ul>
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">Support</li>
           <li class="footer-text" >Contact Customer Service</li>
           <li class="footer-text" >FAQ</li>
