--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <option value="New York">
             <option value="MGM Grand">
             <option value="Circus Circus">
-            <option value="The Venetian">
+            <option value="The Venetian">git
           </datalist>
           <input class="start-search-input" type="date" id="start-search" name="start-search" >
           <input class="start-search-name" type="text" id="name" name="name" required value="2 Adults — 0 Children — 1 Room">
