--- a/index.html
+++ b/index.html
@@ -11,11 +11,48 @@
   <title>lesson</title>
 </head>
 <body>
-
 <section >
-  <div class="advantages-width">
-  <div class="advantages" id="advantages">
-    <h2 class="content-home-heading" id="content-home-heading">What do we offer</h2>
+  <header class="content">
+    <nav class="block-1">
+      <img class="logo_vector" src="./img/css_sprites_logo.png" alt="logo">
+      <div class="menu">
+        <a class="a_menu" href="#">Stays</a>
+        <a  class="a_menu" href="#">Attractios</a>
+        <button><img class="img_menu" src="./img/css_sprites_logo.png" alt="night"></button>
+        <button><img class="img_menu_acc"  src="./img/css_sprites_logo.png" alt="account"></button>
+      </div>
+    </nav>
+    <div class="page">
+      <h1 class="discover">Discover stays <br> to live, work or just relax</h1>
+      <div class="search">
+      <!-- change a place of label,when the first screen  will be adaptive-->
+        <div class="search-p">
+          <label for="hotel-search" class="search-p-text">Your destination or hotel name</label>
+          <label for="start-search" class="search-p-text">Check-in — Check-out</label>
+        </div>
+        <form class="search-block">
+          <input class="hotel-search-input" list="hotel" type="search" id="hotel-search" name="hotel-search" placeholder="Add your city">
+          <datalist id="hotel">
+            <option value="New York">
+            <option value="MGM Grand">
+            <option value="Circus Circus">
+            <option value="The Venetian">git
+          </datalist>
+          <input class="start-search-input" type="date" id="start-search" name="start-search" >
+          <input class="start-search-name" type="text" id="name" name="name" required value="2 Adults — 0 Children — 1 Room">
+          <input class="btm-search search-block" type="submit" value="Search">
+        </form >
+      </div>
+    </div>
+    <div class="icon-svg">
+      <img class="icon-svg-brend" src="./img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917%201.svg" alt="google-play">
+      <img class="icon-svg-brend" src="./img/google-play-badge.svg" alt="App_Store">
+    </div>
+  </header>
+</section>
+<section class="advantages">
+  <div class="advantages">
+    <h2 class="content-home-heading">What do we offer</h2>
     <div class="navlist-block">
       <ul class="navlist">
         <li >
@@ -37,39 +74,68 @@
       </ul>
     </div>
   </div>
-  </div>
 </section>
-<footer>
-  <div class="footer" >
-    <div class="fotter-width">
-      <div class="footer-about" >
-        <ul class="otdelni">
-          <li class="bold-footer-text">About</li>
-          <li class="footer-text">How Triphouse work</li>
-          <li class="footer-text" >Careers</li>
-          <li class="footer-text" >Privacy</li>
-          <li class="footer-text" >Terms</li>
-        </ul>
-        <ul class="otdelni">
-          <li class="bold-footer-text">Property types</li>
-          <li class="footer-text" >Guest houses</li>
-          <li class="footer-text" >Hotels</li>
-          <li class="footer-text" >Apartments</li>
-          <li class="footer-text" >Villas</li>
-          <li class="footer-text" >Holiday homes</li>
-          <li class="footer-text" >Hostels</li>
-        </ul>
-        <ul class="otdelni">
-          <li class="bold-footer-text">Support</li>
-          <li class="footer-text" >Contact Customer Service</li>
-          <li class="footer-text" >FAQ</li>
-        </ul>
-      </div>
-      <div class="triphouse">
-        <p class="triphouse-p">&#169;2020 Triphouse, Inc.All rights reserved</p>
+<section>
+  <div class="heading-homes">
+    <div class="content-homes">
+      <h2 class="content-home-heading">Homes guests loves</h2>
+      <div class="content-home-img">
+        <figure>
+          <img src="img/Rectangle 48.png" alt="Hotel Leopold">
+          <figcaption class="content-home-img-fig">Hotel Leopold</figcaption>
+          <p class="content-home-img-p"> Saint Petersburg, Russia</p>
+        </figure>
+        <figure>
+          <img src="img/Rectangle 49.png" alt="Apartment Sunshine">
+          <figcaption class="content-home-img-fig">Apartment Sunshine</figcaption>
+          <p class="content-home-img-p">Santa Cruz de Tenerife, <br> Spain</p>
+        </figure>
+        <figure>
+          <img  class="figcap" src="img/Rectangle 50.png" alt=" Villa Kunerad">
+          <figcaption class="content-home-img-fig figcap"> Villa Kunerad</figcaption>
+          <p class="content-home-img-p figcap">Vysokie Tatry, Slowakia</p>
+        </figure>
+        <figure>
+          <img class="img-button figcap" src="img/Rectangle 51.png" alt="Hostel Friendship">
+          <figcaption class="content-home-img-fig figcap ">Hostel Friendship</figcaption>
+          <p class="content-home-img-p figcap">Berlin, Germany</p>
+        </figure>
+        <button class="button-imgs"><img class="button-img-s " src="img/Polygon 2.svg" alt=""></button>
       </div>
     </div>
   </div>
+
+</section>
+<footer>
+  <section class="footer" >
+    <div class="footer-about">
+
+      <ul class="otdelni">
+        <li class="bold footer-text">About</li>
+        <li class="footer-text">How Triphouse work</li>
+        <li class="footer-text" >Careers</li>
+        <li class="footer-text" >Privacy</li>
+        <li class="footer-text" >Terms</li>
+      </ul>
+      <ul class="otdelni">
+        <li class="bold footer-text">Property types</li>
+        <li class="footer-text" >Guest houses</li>
+        <li class="footer-text" >Hotels</li>
+        <li class="footer-text" >Apartments</li>
+        <li class="footer-text" >Villas</li>
+        <li class="footer-text" >Holiday homes</li>
+        <li class="footer-text" >Hostels</li>
+      </ul>
+      <ul class="otdelni">
+        <li class="bold footer-text">Support</li>
+        <li class="footer-text" >Contact Customer Service</li>
+        <li class="footer-text" >FAQ</li>
+      </ul>
+    </div>
+    <div class="triphouse">
+      <p>&#169;2020 Triphouse, Inc.All rights reserved</p>
+    </div>
+  </section>
 </footer>
 </body>
 </html>
