--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <title>lesson</title>
 </head>
 <body>
-<section >
+<!--Discover stays to live, work or just relax-->
+<section  class="discover-bg">
   <header class="content">
     <nav class="block-1">
       <img class="logo_vector" src="./img/css_sprites_logo.png" alt="logo">
       <div class="menu">
+
         <a class="a_menu" href="#">Stays</a>
         <a  class="a_menu" href="#">Attractios</a>
+
         <button><img class="img_menu" src="./img/css_sprites_logo.png" alt="night"></button>
         <button><img class="img_menu_acc"  src="./img/css_sprites_logo.png" alt="account"></button>
       </div>
@@ -25,58 +28,61 @@
     <div class="page">
       <h1 class="discover">Discover stays <br> to live, work or just relax</h1>
       <div class="search">
-      <!-- change a place of label,when the first screen  will be adaptive-->
         <div class="search-p">
-          <label for="hotel-search" class="search-p-text">Your destination or hotel name</label>
-          <label for="start-search" class="search-p-text">Check-in — Check-out</label>
+          <p class="search-p-text">Your destination or hotel name</p>
+          <p class="search-p-text">Check-in — Check-out</p>
         </div>
         <form class="search-block">
-          <input class="hotel-search-input" list="hotel" type="search" id="hotel-search" name="hotel-search" placeholder="Add your city">
+          <input class="hotel-search-input" list="hotel" type="search" id="hotel-search" name="hotel-search">
           <datalist id="hotel">
             <option value="New York">
             <option value="MGM Grand">
             <option value="Circus Circus">
-            <option value="The Venetian">git
+            <option value="The Venetian">
           </datalist>
-          <input class="start-search-input" type="date" id="start-search" name="start-search" >
+          <input class="start-search-input" type="date" id="start-search" name="start-search">
           <input class="start-search-name" type="text" id="name" name="name" required value="2 Adults — 0 Children — 1 Room">
-          <input class="btm-search search-block" type="submit" value="Search">
+          <input class="btm-search-input" type="submit" value="Search">
         </form >
       </div>
     </div>
     <div class="icon-svg">
       <img class="icon-svg-brend" src="./img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917%201.svg" alt="google-play">
-      <img class="icon-svg-brend" src="./img/google-play-badge.svg" alt="App_Store">
+      <img class="icon-svg-brend" src="./img/google-play-badge.png" alt="App_Store">
     </div>
   </header>
 </section>
-<section class="advantages">
-  <div class="advantages">
-    <h2 class="content-home-heading">What do we offer</h2>
-    <div class="navlist-block">
-      <ul class="navlist">
-        <li >
-          <img class="support" src=img/css_sprites.png alt="Icon">
-          <p>Support 24/7</p>
-        </li>
-        <li>
-          <img class="com" src=img/css_sprites.png alt="Icon">
-          <p>Communicate directly</p>
-        </li>
-        <li >
-          <img class="book" src=img/css_sprites.png alt="Icon">
-          <p>Book online</p>
-        </li>
-        <li >
-          <img class="like" src=img/css_sprites.png alt="Icon">
-          <p>Real quest reviews</p>
-        </li>
-      </ul>
+<!--What do we offer-->
+<section >
+  <div class="advantages-width">
+    <div class="advantages" id="advantages">
+      <h2 class="content-home-heading underline" id="content-home-heading">What do we offer</h2>
+      <div class="navlist-block">
+        <ul class="navlist">
+          <li >
+            <img class="support" src=img/css_sprites.png alt="Icon">
+            <p>Support 24/7</p>
+          </li>
+          <li>
+            <img class="com" src=img/css_sprites.png alt="Icon">
+            <p>Communicate directly</p>
+          </li>
+          <li >
+            <img class="book" src=img/css_sprites.png alt="Icon">
+            <p>Book online</p>
+          </li>
+          <li >
+            <img class="like" src=img/css_sprites.png alt="Icon">
+            <p>Real quest reviews</p>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
-<section>
-  <div class="heading-homes">
+<!--Homes guests loves-->
+<section class="homes-bg">
+  <div class="heading-homes" id="heading-homes">
     <div class="content-homes">
       <h2 class="content-home-heading">Homes guests loves</h2>
       <div class="content-home-img">
@@ -87,55 +93,56 @@
         </figure>
         <figure>
           <img src="img/Rectangle 49.png" alt="Apartment Sunshine">
-          <figcaption class="content-home-img-fig">Apartment Sunshine</figcaption>
-          <p class="content-home-img-p">Santa Cruz de Tenerife, <br> Spain</p>
+          <figcaption class="content-home-img-fig" >Apartment Sunshine</figcaption>
+          <p class="content-home-img-p" >Santa Cruz de Tenerife, <br> Spain</p>
         </figure>
-        <figure>
+        <figure class="figcap-768">
           <img  class="figcap" src="img/Rectangle 50.png" alt=" Villa Kunerad">
           <figcaption class="content-home-img-fig figcap"> Villa Kunerad</figcaption>
           <p class="content-home-img-p figcap">Vysokie Tatry, Slowakia</p>
         </figure>
-        <figure>
+        <figure class="figcap-1220">
           <img class="img-button figcap" src="img/Rectangle 51.png" alt="Hostel Friendship">
           <figcaption class="content-home-img-fig figcap ">Hostel Friendship</figcaption>
-          <p class="content-home-img-p figcap">Berlin, Germany</p>
+          <p class="content-home-img-p ">Berlin, Germany</p>
         </figure>
-        <button class="button-imgs"><img class="button-img-s " src="img/Polygon 2.svg" alt=""></button>
+        <button class="button-imgs" id="button-imgs"><img class="button-img-s " src="img/Polygon 2.svg" alt=""></button>
       </div>
     </div>
   </div>
-
 </section>
+<!--footer-->
 <footer>
-  <section class="footer" >
-    <div class="footer-about">
-
-      <ul class="otdelni">
-        <li class="bold footer-text">About</li>
-        <li class="footer-text">How Triphouse work</li>
-        <li class="footer-text" >Careers</li>
-        <li class="footer-text" >Privacy</li>
-        <li class="footer-text" >Terms</li>
-      </ul>
-      <ul class="otdelni">
-        <li class="bold footer-text">Property types</li>
-        <li class="footer-text" >Guest houses</li>
-        <li class="footer-text" >Hotels</li>
-        <li class="footer-text" >Apartments</li>
-        <li class="footer-text" >Villas</li>
-        <li class="footer-text" >Holiday homes</li>
-        <li class="footer-text" >Hostels</li>
-      </ul>
-      <ul class="otdelni">
-        <li class="bold footer-text">Support</li>
-        <li class="footer-text" >Contact Customer Service</li>
-        <li class="footer-text" >FAQ</li>
-      </ul>
+  <div class="footer" >
+    <div class="fotter-width">
+      <div class="footer-about" >
+        <ul class="otdelni">
+          <li class="bold-footer-text">About</li>
+          <li class="footer-text">How Triphouse work</li>
+          <li class="footer-text" >Careers</li>
+          <li class="footer-text" >Privacy</li>
+          <li class="footer-text" >Terms</li>
+        </ul>
+        <ul class="otdelni">
+          <li class="bold-footer-text">Property types</li>
+          <li class="footer-text" >Guest houses</li>
+          <li class="footer-text" >Hotels</li>
+          <li class="footer-text" >Apartments</li>
+          <li class="footer-text" >Villas</li>
+          <li class="footer-text" >Holiday homes</li>
+          <li class="footer-text" >Hostels</li>
+        </ul>
+        <ul class="otdelni">
+          <li class="bold-footer-text">Support</li>
+          <li class="footer-text" >Contact Customer Service</li>
+          <li class="footer-text" >FAQ</li>
+        </ul>
+      </div>
+      <div class="triphouse">
+        <p class="triphouse-p">&#169;2020 Triphouse, Inc.All rights reserved</p>
+      </div>
     </div>
-    <div class="triphouse">
-      <p>&#169;2020 Triphouse, Inc.All rights reserved</p>
-    </div>
-  </section>
+  </div>
 </footer>
 </body>
 </html>
