--- a/index.html
+++ b/index.html
@@ -167,6 +167,127 @@
     </div>
   </aside>
 </section>
+
+<!-- Guests reviews -->
+<section>
+  <div class="guests-bg">
+    <h2 class="content-home-heading">Guests reviews</h2>
+    <div class="reviews">
+      <div class="reviews-width" id="reviews-width">
+        <div class="content-reviews" id="content-reviews">
+          <div class="content-reviews-img">
+            <figure class="hotel">
+              <img src="img/hotel.png" alt="hotel">
+              <figcaption> <p>From 250 USD</p> </figcaption>
+            </figure>
+            <div class="content-reviwes-img-fig">
+              <div class="location">
+                <div class="location-p">
+                  <p>Ubud Bali Resort&SPA</p>
+                  <p>Bali, Indonesia</p>
+                </div>
+                <div class="estimation">
+                  <img src="img/score.svg" alt="">
+                  <p> 1324 reviews </p>
+                </div>
+              </div>
+
+              <div class="users-reviews">
+                <img src="img/AccountCircle 1.png" alt="">
+                <div class="users-data">
+                  <h4>Hanna Ivanova</h4>
+                  <figure class="users-country">
+                    <img src="img/Ukraine.png" alt="">
+                    <figcaption>Ukraine</figcaption>
+                  </figure>
+                </div>
+              </div>
+              <p class="users-country-reviews" id="users-country-reviews">Great location, really pleasant and clean rooms, but the thing that makes this such a good place to stay are the staff. All of the people are incredibly helpful and generous with their time and advice.</p>
+              <div class="btn-group">
+                <input type="radio" name="rb" id="rb1" checked> <label for="rb1"></label>
+                <input type="radio" name="rb" id="rb2" checked> <label for="rb2"></label>
+                <input type="radio" name="rb" id="rb3" checked> <label for="rb3"></label>
+                <input type="radio" name="rb" id="rb4" checked> <label for="rb4"></label>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="content-reviews fig-575">
+          <div class="content-reviews-img">
+            <figure class="hotel">
+              <img src="img/room.png" alt="hotel">
+              <figcaption> <p>From 40 USD</p> </figcaption>
+            </figure>
+            <div class="content-reviwes-img-fig">
+              <div class="location">
+                <div class="location-p">
+                  <p>King Kong Hostel</p>
+                  <p>Rotterdam, Netherlands</p>
+                </div>
+                <div class="estimation">
+                  <img src="img/score(1).svg" alt="">
+                  <p> 2016 reviews </p>
+                </div>
+              </div>
+
+              <div class="users-reviews ">
+                <img src="img/AccountCircle 1.png" alt="">
+                <div class="users-data">
+                  <h4>Adam Smith</h4>
+                  <figure class="users-country">
+                    <img src="img/Ukraine.png" alt="">
+                    <figcaption>USA</figcaption>
+                  </figure>
+                </div>
+              </div>
+              <p class="users-country-reviews">I've been in this hostel
+                for a month and here is the best hostel of all Excellent
+                management of excellent and ethical staff and bedrooms Bathrooms are always clean and excellent Most importantly, those who work here are kind and good-natured.</p>
+            </div>
+          </div>
+
+        </div>
+        <div class="content-reviews fig-1220 fig-575 ">
+          <div class="content-reviews-img ">
+            <figure class="hotel ">
+              <img src="img/host.png" alt="hotel">
+              <figcaption> <p>From 100 USD</p> </figcaption>
+            </figure>
+            <div class="content-reviwes-img-fig">
+              <div class="location">
+                <div class="location-p">
+                  <p>Rokoko Hotel</p>
+                  <p>Ourika, Marocco</p>
+                </div>
+                <div class="estimation">
+                  <img src="img/score(2).svg" alt="">
+                  <p>815 reviews</p>
+                </div>
+              </div>
+
+              <div class="users-reviews">
+                <img src="img/AccountCircle 1.png" alt="">
+                <div class="users-data">
+                  <h4>Anika Messer</h4>
+                  <figure class="users-country">
+                    <img src="img/Ukraine.png" alt="">
+                    <figcaption>Germany</figcaption>
+                  </figure>
+                </div>
+              </div>
+              <p class="users-country-reviews">Efficient, friendly, professional, and appropriately attentive. Great hotel in a great location. Easy access to all the surrounding historical sites. Staff is fantastic. Will definitely stay at this location during my next stay in Marocco.</p>
+
+            </div>
+          </div>
+        </div>
+        <button class="button-imgss"><img class="button-img-s " src="img/Polygon 2(1).svg" alt=""></button>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <!--footer-->
 <footer>
   <div class="footer" >
