--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <nav class="block-1">
       <img class="logo_vector" src="./img/css_sprites_logo.png" alt="logo">
       <div class="menu">
-
         <a class="a_menu" href="#">Stays</a>
         <a  class="a_menu" href="#">Attractios</a>
-
         <button><img class="img_menu" src="./img/css_sprites_logo.png" alt="night"></button>
         <button><img class="img_menu_acc"  src="./img/css_sprites_logo.png" alt="account"></button>
       </div>
@@ -28,9 +26,10 @@
     <div class="page">
       <h1 class="discover">Discover stays <br> to live, work or just relax</h1>
       <div class="search">
+      <!-- change a place of label,when the first screen  will be adaptive-->
         <div class="search-p">
-          <p class="search-p-text">Your destination or hotel name</p>
-          <p class="search-p-text">Check-in — Check-out</p>
+          <label for="hotel-search" class="search-p-text">Your destination or hotel name</label>
+          <label for="start-search" class="search-p-text">Check-in — Check-out</label>
         </div>
         <form class="search-block">
           <input class="hotel-search-input" list="hotel" type="search" id="hotel-search" name="hotel-search">
@@ -48,7 +47,7 @@
     </div>
     <div class="icon-svg">
       <img class="icon-svg-brend" src="./img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917%201.svg" alt="google-play">
-      <img class="icon-svg-brend" src="./img/google-play-badge.png" alt="App_Store">
+      <img class="icon-svg-brend" src="./img/google-play-badge.svg" alt="App_Store">
     </div>
   </header>
 </section>
@@ -56,7 +55,7 @@
 <section >
   <div class="advantages-width">
     <div class="advantages" id="advantages">
-      <h2 class="content-home-heading underline" id="content-home-heading">What do we offer</h2>
+      <h2 class="content-home-heading underline" >What do we offer</h2>
       <div class="navlist-block">
         <ul class="navlist">
           <li >
@@ -111,19 +110,77 @@
     </div>
   </div>
 </section>
+<!--The best destinations-->
+<section>
+  <div class="heading-homes-place">
+    <div class="content-homes">
+      <h2 class="content-home-heading" id="content-home-heading">The best destinations</h2>
+      <div class="tabs">
+        <button class="tabs-button">Regions</button>
+        <button class="tabs-button">Cities</button>
+        <button class="tabs-button button-places"></button>
+      </div>
+      <div class="content-home-img" id="content-home-img">
+        <figure class="container-btn">
+          <img class="container-img"  id="container-btn" src="img/Rectangle 52.png" alt="Maldives">
+          <button class="btn" >Book now</button>
+          <figcaption class="content-home-img-fig">Maldives</figcaption>
+        </figure>
+        <figure>
+          <img class="" src="img/Rectangle 53.png" alt="Spain">
+          <figcaption class="content-home-img-fig ">Spain</figcaption>
+        </figure>
+        <figure class="figcap-768">
+          <img  class="figcap" src="img/Rectangle 54.png" alt="Norway">
+          <figcaption class="content-home-img-fig figcap"> Norway</figcaption>
+        </figure>
+        <figure class="figcap-1220">
+          <img class="img-button figcap figcap-m" src="img/Rectangle 55.png" alt="Island">
+          <figcaption class="content-home-img-fig figcap figcap-m ">Island</figcaption>
+        </figure>
+        <button class="content-button-imgs" id="content-button-imgs"><img class="button-img-s-s " src="img/Polygon 2.svg" alt=""></button>
+      </div>
+    </div>
+  </div>
+
+</section>
+<!--Sign up-->
+<section>
+<aside class="profile-bg">
+  <div class="profile" >
+  <button class="profile-user"><img src="img/user.png" alt=""></button>
+  <div class="profile-p-b">
+    <h3>Sign up and get 20% off your first booking</h3>
+    <button class="profile-sing-button">Sign up</button>
+  </div>
+  <button class="profile-clouse"><img src="img/Vector.svg" alt=""></button>
+  </div>
+</aside>
+
+  <aside class="mob-profile-bg">
+    <div class="mob-profile" >
+    <button class="mob-profile-user"><img class="mob-profile-user-i" src="img/Vector.png" alt=""></button>
+    <img class="tripHouseMob-img" src="img/tripHouseMob.svg" alt="tripHouseMob">
+    <div class="mob-profile-h-a">
+      <h3 class="mob-profile-h" >Sign up in the app and get 20% off your first booking</h3>
+      <a class="mob-profile-a">Install</a>
+    </div>
+    </div>
+  </aside>
+</section>
 <!--footer-->
 <footer>
   <div class="footer" >
     <div class="fotter-width">
       <div class="footer-about" >
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">About</li>
           <li class="footer-text">How Triphouse work</li>
           <li class="footer-text" >Careers</li>
           <li class="footer-text" >Privacy</li>
           <li class="footer-text" >Terms</li>
         </ul>
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">Property types</li>
           <li class="footer-text" >Guest houses</li>
           <li class="footer-text" >Hotels</li>
@@ -132,7 +189,7 @@
           <li class="footer-text" >Holiday homes</li>
           <li class="footer-text" >Hostels</li>
         </ul>
-        <ul class="otdelni">
+        <ul class="footet-column">
           <li class="bold-footer-text">Support</li>
           <li class="footer-text" >Contact Customer Service</li>
           <li class="footer-text" >FAQ</li>
