--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -109,6 +110,8 @@
     </div>
   </div>
 </section>
+
+<div class="order-class">
 <!--The best destinations-->
 <section>
   <div class="heading-homes-place">
@@ -144,26 +147,26 @@
 
 </section>
 <!--Sign up-->
-<section>
-<aside class="profile-bg">
-  <div class="profile" >
-  <button class="profile-user"><img src="img/user.png" alt=""></button>
-  <div class="profile-p-b">
-    <h3>Sign up and get 20% off your first booking</h3>
-    <button class="profile-sing-button">Sign up</button>
-  </div>
-  <button class="profile-clouse"><img src="img/Vector.svg" alt=""></button>
-  </div>
-</aside>
+<section class="sign-up-order">
+  <aside class="profile-bg">
+    <div class="profile" >
+      <button class="profile-user"><img src="img/user.png" alt=""></button>
+      <div class="profile-p-b">
+        <h3>Sign up and get 20% off your first booking</h3>
+        <button class="profile-sing-button">Sign up</button>
+      </div>
+      <button class="profile-clouse"><img src="img/Vector.svg" alt=""></button>
+    </div>
+  </aside>
 
   <aside class="mob-profile-bg">
     <div class="mob-profile" >
-    <button class="mob-profile-user"><img class="mob-profile-user-i" src="img/Vector.png" alt=""></button>
-    <img class="tripHouseMob-img" src="img/tripHouseMob.svg" alt="tripHouseMob">
-    <div class="mob-profile-h-a">
-      <h3 class="mob-profile-h" >Sign up in the app and get 20% off your first booking</h3>
-      <a class="mob-profile-a">Install</a>
-    </div>
+      <button class="mob-profile-user"><img class="mob-profile-user-i" src="img/Vector.png" alt=""></button>
+      <img class="tripHouseMob-img" src="img/tripHouseMob.svg" alt="tripHouseMob">
+      <div class="mob-profile-h-a">
+        <h3 class="mob-profile-h" >Sign up in the app and get 20% off your first booking</h3>
+        <a class="mob-profile-a">Install</a>
+      </div>
     </div>
   </aside>
 </section>
@@ -171,7 +174,8 @@
 <!-- Guests reviews -->
 <section>
   <div class="guests-bg">
-    <h2 class="content-home-heading">Guests reviews</h2>
+    <h2 class="content-home-heading-des">Guests reviews</h2>
+    <h2 class=" content-home-heading-mob">Reviews</h2>
     <div class="reviews">
       <div class="reviews-width" id="reviews-width">
         <div class="content-reviews" id="content-reviews">
@@ -193,8 +197,8 @@
               </div>
 
               <div class="users-reviews">
-                <img src="img/AccountCircle 1.png" alt="">
-                <div class="users-data">
+                <img class="users-reviews-img" src="img/AccountCircle 1.png" alt="">
+                <div class="users-data" id="users-data">
                   <h4>Hanna Ivanova</h4>
                   <figure class="users-country">
                     <img src="img/Ukraine.png" alt="">
@@ -204,10 +208,10 @@
               </div>
               <p class="users-country-reviews" id="users-country-reviews">Great location, really pleasant and clean rooms, but the thing that makes this such a good place to stay are the staff. All of the people are incredibly helpful and generous with their time and advice.</p>
               <div class="btn-group">
-                <input type="radio" name="rb" id="rb1" checked> <label for="rb1"></label>
-                <input type="radio" name="rb" id="rb2" checked> <label for="rb2"></label>
-                <input type="radio" name="rb" id="rb3" checked> <label for="rb3"></label>
-                <input type="radio" name="rb" id="rb4" checked> <label for="rb4"></label>
+                <input class="btn-group-custom" type="radio" name="rb" id="rb1" checked> <label for="rb1"></label>
+                <input class="btn-group-custom" type="radio" name="rb" id="rb2" > <label for="rb2"></label>
+                <input class="btn-group-custom" type="radio" name="rb" id="rb3" > <label for="rb3"></label>
+                <input class="btn-group-custom" type="radio" name="rb" id="rb4" > <label for="rb4"></label>
               </div>
             </div>
           </div>
@@ -248,7 +252,7 @@
           </div>
 
         </div>
-        <div class="content-reviews fig-1220 fig-575 ">
+        <div class="content-reviews fig-1220 fig-575  ">
           <div class="content-reviews-img ">
             <figure class="hotel ">
               <img src="img/host.png" alt="hotel">
@@ -267,7 +271,7 @@
               </div>
 
               <div class="users-reviews">
-                <img src="img/AccountCircle 1.png" alt="">
+                <img  src="img/AccountCircle 1.png" alt="">
                 <div class="users-data">
                   <h4>Anika Messer</h4>
                   <figure class="users-country">
@@ -286,7 +290,7 @@
     </div>
   </div>
 </section>
-
+</div>
 
 <!--footer-->
 <footer>
