fix media width 360px

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="content-home-img" id="content-home-img">
           <figure class="container-btn">
-            <div class="img-bg">
+            <div class="img-bg"  id="img-bg">
               <img class="container-img"  id="container-btn" src="img/Rectangle 52.png" alt="Maldives">
               <div class="block">
                 <button class="btn" >Book now</button>
@@ -132,7 +132,7 @@
             <figcaption class="content-home-img-fig">Maldives</figcaption>
           </figure>
           <figure class="container-btn" >
-            <div class="img-bg">
+            <div class="img-bg" id="img--bg" >
               <img class="" src="img/Rectangle 53.png" alt="Spain">
               <div class="block">
                 <button class="btn" >Book now</button>
