--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   <div class="users-data" id="users-data">
                     <h4>Hanna Ivanova</h4>
                     <figure class="users-country">
-                      <img src="img/ukraine.png" alt="flag">
+                      <img src="img/Ukraine.png" alt="flag">
                       <figcaption>Ukraine</figcaption>
                     </figure>
                   </div>
